--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.InNeedActivity"/>
+        <activity
+            android:name=".activity.InNeedActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".activity.VolunteerActivity" />
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
