--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
 
     <application
@@ -29,6 +29,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.ChooseRoleActivity" />
+        <service android:name=".SearchRequestService"
+            android:exported="false"/>
     </application>
 
 </manifest>
