--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation 'junit:junit:4.12'
@@ -84,6 +85,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.firebaseui:firebase-ui-auth:7.0.0'
     implementation group: 'com.google.android.material', name: 'material', version: '1.3.0-alpha03'
+    implementation "com.google.android.material:material:1.2.1"
 
 
 }
