--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,11 @@
         <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="@string/google_maps_api_key" />
         <activity
             android:name=".activity.InNeedActivity"
-            android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".activity.VolunteerActivity" />
+            android:windowSoftInputMode="adjustPan"
+
+            />
+        <activity android:name=".activity.VolunteerActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
